--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ layout: default
         </div>
       
         <div class="paper">
-          <p class="title"><b>NATIONAL UNIVERSITY OF MONGOLIA (NUM)<b style="float:right;">Sep. 2012 - Jun. 2016</b></b></p>
+          <p class="title"><b>National University of Mongolia (NUM)<b style="float:right;">Sep. 2012 - Jun. 2016</b></b></p>
           
           <p>B.S. in Computer Science (advisor: <a href="https://www.linkedin.com/in/ganbayar-uuganbayar-1a83a7ab/">Ganbayar Uuganbayar</a>)</p>
           <p></p>
