--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ layout: default
         <div class="paper">
           <p class="title"><b>National University of Mongolia (NUM)<b style="float:right;">Sep. 2012 - Jun. 2016</b></b></p>
           
-          <p>B.S. in Computer Science (advisor: <a href="https://www.linkedin.com/in/ganbayar-uuganbayar-1a83a7ab/">Ganbayar Uuganbayar</a>)</p>
+          <p>B.S. in Computer Networking (advisor: <a href="https://www.linkedin.com/in/ganbayar-uuganbayar-1a83a7ab/">Ganbayar Uuganbayar</a>)</p>
           <p></p>
         </div>
 </div>
