--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <!-- ========== About ========== -->
 <div class="docs-section" id="about">
   <h5>About</h5>
-  Hello! I am a Master's Student at the <a href="https://osi.kaist.ac.kr/">OSI Lab</a> at <a href="https://gsai.kaist.ac.kr/">KAIST AI</a>, advised by <a href="https://fbsqkd.github.io/">Se-Young Yun</a>. My current research focuses on enhancing the reasoning abilities of large language models. Outside of academics, I am an avid runner, a YouTuber, a taekwondo practitioner, and a music composer. You can listen to one of my original songs, <a href="https://www.youtube.com/watch?v=gZ39MXqjW2c">"The Overexcited Boy."</a>
+  Hello! I am a Master's Student at the <a href="https://osi.kaist.ac.kr/">OSI Lab</a> at <a href="https://gsai.kaist.ac.kr/">KAIST AI</a>, advised by <a href="https://fbsqkd.github.io/">Se-Young Yun</a>. My current research focuses on enhancing the reasoning efficiency of large language models. Outside of academics, I am an avid runner, a YouTuber, a taekwondo practitioner, and a music composer. You can listen to one of my original songs, <a href="https://www.youtube.com/watch?v=gZ39MXqjW2c">"The Overexcited Boy."</a>
 </div>
 
 <!-- ========== News ========== -->
