Update experience details, main info, and personal description in CV

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@ layout: default
 <!-- ========== About ========== -->
 <div class="docs-section" id="about">
   <h5>About</h5>
-  Hello! I am a Master's Student at the <a href="https://osi.kaist.ac.kr/">OSI Lab</a> at <a href="https://gsai.kaist.ac.kr/">KAIST AI</a>, advised by <a href="https://fbsqkd.github.io/">Se-Young Yun</a>. My current research focuses on enhancing the reasoning efficiency of large language models. Outside of academics, I am an avid runner, a YouTuber, a taekwondo practitioner, and a music composer. You can listen to one of my original songs, <a href="https://www.youtube.com/watch?v=gZ39MXqjW2c">"The Overexcited Boy."</a>
+  Hello! I am an overexcited AI entrepreneur on a mission to illuminate paths to joy, peace, and love for everyone I serve! 🚀 I graduated with my Master's from <a href="https://gsai.kaist.ac.kr/">KAIST AI</a> (advised by <a href="https://fbsqkd.github.io/">Se-Young Yun</a>), and now I'm building AI tutors that make learning a new language not only dramatically faster, but also more joyful.
+
+  <br><br>Beyond the code, I'm an avid runner, YouTuber, taekwondo practitioner, and music composer. You can feel my energy in my song, <a href="https://www.youtube.com/watch?v=gZ39MXqjW2c">"The Overexcited Boy."</a>
 </div>
 
 <!-- ========== News ========== -->
@@ -49,8 +51,8 @@ layout: default
   <h5>Education</h5>
 
         <div class="paper">
-          <p class="title"><b>Korea Advanced Institute of Science and Technology (KAIST) <b style="float:right;">Sep. 2023 - Present</b></b></p>
-          
+          <p class="title"><b>Korea Advanced Institute of Science and Technology (KAIST) <b style="float:right;">Sep. 2023 - Aug. 2025</b></b></p>
+
           <p>M.S. in Artificial Intelligence (advisor: <a href="https://fbsqkd.github.io/">Se-Young Yun</a>)</p>
           <p></p>
         </div>
