feat: implement trilingual blog feature
- Add blog layouts: post.html and blog-index.html
- Add language switcher component
- Create sample trilingual welcome post (en/ko/mn)
- Add blog navigation to index.html
- Add comprehensive blog CSS styling
- Update tasks.md to track implementation progress

Implements:
- Phase 1: Setup (T001-T004) ✓
- Phase 2: Foundational (T005-T007) ✓
- Phase 3: US1 - Create Post (T008-T012) ✓
- Phase 4: US2 - Blog Index (T019-T024) ✓
- Phase 5: US3 - Language Switch (T031-T036) ✓

--- a/index.html
+++ b/index.html
@@ -170,6 +170,12 @@ layout: default
     
 </div>
 
+<!-- ========== BLOG ========== -->
+<div class="docs-section" id="blog">
+  <h5>Blog</h5>
+  <p>Read my latest thoughts and updates on <a href="/blog/">the blog</a>.</p>
+</div>
+
 <!-- ========== PROJECTS ========== -->
 <!-- <div class="docs-section" id="projects">
   <h4>Projects</h4>
